Added middleware
